Improve passing of deterministic Math.random into worker threads, plus significant game changes to spacewar, tokens, fgtw, botflocks and captureflag

--- a/fgtw.htm
+++ b/fgtw.htm
@@ -19,13 +19,13 @@
 <link rel="icon" href="favicons/fgtw.png">
 <meta name="stack-exchange-site" content="codegolf">
 <meta name="stack-exchange-qid" content="51698">
-<meta name="stack-exchange-code-template" content="function attributes() {
+<meta name="stack-exchange-code-template" content="this._attributes = function() {
 {{codeblock:0, prefix:    }}
-}
+};
 
-function main(bulletsLeft, yourShots, enemyShots, yourMovement, enemyMovement) {
+this._main = function(bulletsLeft, yourShots, enemyShots, yourMovement, enemyMovement) {
 {{codeblock:1, prefix:    }}
-}
+};
 ">
 
 <meta name="team-view-columns" content='[]'>
